<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ConfigSorteioFragment"
    android:background="@color/background_primary">


    <TextView
        android:id="@+id/tvQueroSortear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quero_sortear"
        android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInfoContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defina_o_intervalo_contain"
        android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQueroSortear" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoContent">

        <Space
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_meros"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
                android:textColor="@color/content_secundary" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/etAmountNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:inputType="number"
                android:padding="16dp"
                android:text="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Sora.DisplaySmall"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/de"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
                android:textColor="@color/content_secundary" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/etFromNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:inputType="number"
                android:padding="16dp"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Sora.DisplaySmall"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
                android:textColor="@color/content_secundary" />

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/etAtNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext"
                android:inputType="number"
                android:padding="16dp"
                android:text="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Sora.DisplaySmall"
                android:textColor="@android:color/white" />


        </LinearLayout>


        <Space
            android:layout_width="8dp"
            android:layout_height="0dp" />


    </LinearLayout>


    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swtNotReapeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        app:layout_constraintStart_toStartOf="parent"
        app:thumbTint="@android:color/white"
        app:trackTint="@color/content_tertiary"
        app:trackDecorationTint="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/n_o_repetir_n_mero"
        app:layout_constraintBottom_toBottomOf="@+id/swtNotReapeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/swtNotReapeat"
        app:layout_constraintTop_toTopOf="@+id/swtNotReapeat" />




</androidx.constraintlayout.widget.ConstraintLayout>